# pl_jdt

./: .gitignore  cpu_install.sh  dev_environment.yml  dev_install.sh  environment.yml  install.sh  mypy.ini  pyproject.toml
.dev/: _cleanup.sh  _dev-tmux.sh  _s.sh  dev_install.sh
.github/workflows/: ci.yml  run_exp.yml  tests.yml
_/: callbacks.py  clusters.py  logger.py  metrics.py  progress.py
cfg/exp/: default.yaml  det.yaml  seg.yaml  tests.yaml
cfg/project/: default.yaml  mot.yaml  tests.yaml
notebooks/: colab_mask_rcnn.ipynb  sandbox_torchmetrics.ipynb
pl_jdt/models/: model.py
pl_jdt/pl/datasets/: dataset.py  mot.py  penn_fudan.py
pl_jdt/pl/modules/: det_module.py  module.py  seg_module.py
pl_jdt/utils/: transforms.py  utils.py
pl_jdt/utils/references/detection/: coco_eval.py  coco_utils.py  engine.py
scripts/: _det_train.sh  _seg_train.sh  det_train.py  seg_train.py  train.py
src/data/datasets/: penn_fundan.py
src/models/: faster_rcnn.py  mask_rcnn.py
src/pl/datasets/: dataset.py  mot.py  penn_fudan.py
src/pl/modules/: det_module.py  module.py  seg_module.py
src/utils/: utils.py
src/utils/references/detection/: coco_eval.py  coco_utils.py  engine.py
tests/: conftest.py  fixtures.py
tests/components/pl/: test_pl_datasets.py
tmp/: kfold.py  mask_rcnn.py
tmp/tracking_wo_bnw/: setup.py
tmp/tracking_wo_bnw/experiments/evaluation_tools/: _init_paths.py
tmp/tracking_wo_bnw/experiments/scripts/: faster_rcnn_fpn_training.ipynb  faster_rcnn_fpn_training.py  obj_det_training.py
tmp/tracking_wo_bnw/src/obj_det/: coco_eval.py  (+3 more)
