[tool.poetry]
name = "pl_jdt"
version = "0.0.1"
description = ""
license = "MIT"
authors = ["Mazen Alotaibi <sudomaze@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/sudomaze/jdt"
homepage = "https://github.com/sudomaze/jdt"
keywords = ['pytorch', 'pytorch-lightning']

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sudomaze/pl_jdt/issues"
"Changelog" = "https://github.com/sudomaze/pl_jdt/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.2.0"
wandb = "^0.12.14"
hydra-core = "^1.1.1"
omegaconf = "^2.1.1"
jupyter = "^1.0.0"
poethepoet = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.5"
autopep8 = "^1.6.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120 # override the default of 88

[tool.poe.tasks]
train = "python scripts/train.py"
pytest = "pytest tests"